# sub-zero

./: .gitignore  CHANGELOG.md  LICENSE  README.md  sub-zero.cabal
app/: Main.hs
app/Core/: AST.hs  Pretty.hs  Reduce.hs
app/Surface/: AST.hs  Parse.hs
app/Typing/: Coalesce.hs  Syntax.hs  TCM.hs  Typecheck.hs
notes/: ADTs.md
